@@ -1,5 +1,6 @@
 Version 2.02.34 -
 ===================================
+  Fix potential deadlock in clvmd thread handling.
   Refactor text format initialisation into _init_text_import.
   Escape double quotes and backslashes in external metadata and config data.
   Add functions for escaping double quotes in strings.
